--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/styles.css">
     <title>Portland animal shelter</title>
   </head>
 
@@ -8,9 +9,18 @@
     <h1>Portland Animal Shelter</h1>
     <p>The Pacifc Northwest's finest establishment for animal care and adoptions!</p>
     <ul>
-    <li>Bro</li>
-    <li>Fozzie</li>
-    <li>Eloise</li>
-  </ul>
+      <li>Appointments</li>
+      <li>Volenteer</li>
+      <li>Contact</li>
+    </ul>
+    <div class="columns">
+      <p>Bro</p>
+    </div>
+    <div class="columns">
+      <p>Fozzie</p>
+    </div>
+    <div class="columns">
+      <p>Eloise</p>
+    </div>
   </body>
 </html>
